# Capstone-Soc-Dameon

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.h  camera_microphone_interface.cpp  camera_microphone_interface.h  config.ini  configservice.cpp  configservice.h  interface.cpp  interface.h  logger.cpp  logger.h  main.cpp  mcu_interface.cpp  mcu_interface.h  motor_driver_interface.cpp  motor_driver_interface.h  msg_callback.h  networkservice.cpp  networkservice.h  peripheralbroker.cpp  peripheralbroker.h  util.hpp
